<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/lv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

                <AutoCompleteTextView
                    android:id="@+id/txtname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_name"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

                <AutoCompleteTextView
                    android:id="@+id/txtemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilmobileno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

                <AutoCompleteTextView
                    android:id="@+id/txtpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parent" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/parentButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/student" />


                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/studentButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.3"
                    android:gravity="center_vertical"
                    android:text="@string/image"
                    android:id="@+id/textImage"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/userImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:gravity="left"
                    android:text="@string/uploadimage"
                    android:visibility="visible" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"

                />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:text="@string/clear"

                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>