<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <include layout="@layout/toolbar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo3"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

                <AutoCompleteTextView
                    android:id="@+id/txtemail2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

                <AutoCompleteTextView
                    android:id="@+id/txtpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btnsignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:text="@string/sign_up"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>