<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView  android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo3"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/app_desc"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.pkmmte.view.CircularImageView
                    android:id="@+id/imageprofile234512"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/rana"
                    app:border_color="#FF000000"
                    app:border_width="4dp"
                    app:shadow="true" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/rana"
                    android:textAppearance="?android:attr/textAppearanceLarge" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.pkmmte.view.CircularImageView
                    android:id="@+id/imageprofile523"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/mariam"
                    app:border_color="#FF000000"
                    app:border_width="4dp"
                    app:shadow="true" />


                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/mariam"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.pkmmte.view.CircularImageView
                    android:id="@+id/imageprofile202"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/alaa"
                    app:border_color="#FF000000"
                    app:border_width="4dp"
                    app:shadow="true" />


                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/Alaa"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.pkmmte.view.CircularImageView
                    android:id="@+id/imageprofile"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/mohamed"
                    app:border_color="#FF000000"
                    app:border_width="4dp"
                    app:shadow="true" />


                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/mohamed"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.pkmmte.view.CircularImageView
                    android:id="@+id/imageprofile13"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ahmed"
                    app:border_color="#FF000000"
                    app:border_width="4dp"
                    app:shadow="true" />


                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/ahmed"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>