<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:elevation="4dp"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/staticLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp">


                <TextView

                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="4"
                    android:paddingBottom="4dp"

                    android:paddingTop="16dp"
                    android:text="@string/name" />

                <TextView


                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-condensed"
                    android:maxLines="2"
                    android:paddingBottom="4dp"
                    android:paddingRight="16dp"
                    android:text="@string/grade"
                    android:textColor="#6000" />

                <TextView

                    android:id="@+id/textView"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingBottom="4dp"
                    android:paddingRight="16dp"
                    android:text="@string/status"
                    android:textColor="#6000" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="64dp">

                <TextView
                    android:id="@+id/subject_name"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="4"
                    android:paddingBottom="4dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"

                    />

                <TextView
                    android:id="@+id/subject_grade"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingBottom="4dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#6000" />

                <TextView
                    android:id="@+id/subject_status"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingBottom="4dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#6000" />


            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
